Auto hide side menu when resizing window below 768px and auto show when resizing menu to beyond 768px.  Respects toggle when resizing.  That is if the menu is toggled off by clicking the toggle button and then resizing beyond 768px, the menu will not auto show.  Similarly for when the toggle button has been clicked to show the menu prior to resizing below 768px.  The threshold can be set in the math4.js in the variable ANSM.threshold. Also, margins were fixed. The masthead would overflow outside of the contair-fluid div when resizing below 768px.  The content has class span12 the menu is toggled off.

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -936,3 +936,7 @@ table#grades_table pre{
     min-height:35px;
     min-width:43px;
 }
+
+#content.span12.fix-content-margin {
+   margin-left: 0px !important;
+}
